# opengl-final-project

./: .gitignore  CMakeLists.txt  cam.txt  main.cpp  mainForTesting.cpp
modelLoader/: modelLoader.cpp  modelLoader.h
models/: crystal.h  hat.h  lightsaber.h
res/models/: crystal.h  hat.h  hatuv.h  obiwan.h
src/: Camera.cpp  Camera.h  CampFire.cpp  CampFire.h  ColorData.cpp  ColorData.h  Coord.cpp  Coord.h  LeftVP.cpp  LeftVP.h  Scenedraw.cpp  Scenedraw.h  campfireAttempt.cpp  campfireAttempt.h  fSceneObjs.cpp  fSceneObjs.h  globals.cpp  globals.h  lighting.cpp  lighting.h  modelLoader.cpp  modelLoader.h  testingFunctions.cpp  testingFunctions.h  textureLoader.cpp  textureLoader.h  things.cpp  things.h
